# NapCatAcpClient

./: .cursorignore  .gitignore  AGENTS.md  README.md  config.example.toml  config.toml  main.py  ncat.service  pyproject.toml
.github/workflows/: ci.yml
docs/: TODO.md  architecture.md  product-v1.md
docs/archive/nochan/: product-v1.md
ncat/: __init__.py  acp_client.py  agent_connection.py  agent_manager.py  agent_process.py  ai_processor.py  bg_command.py  bsp_client.py  command.py  command_system.py  config.py  converter.py  dispatcher.py  file_ingress.py  handler.py  image_utils.py  log.py  models.py  mqtt_subscriber.py  napcat_server.py  opencode.py  pending_inputs.py  permission.py  prompt.py  prompt_builder.py  prompt_runner.py  server.py  session.py
nochan/: ai_processor.py  command.py  config.py  handler.py  opencode.py  prompt.py  server.py
scripts/: install-service.sh  livelog-service.sh  restart-service.sh  status-service.sh
tests/: conftest.py  mock_agent.py  mock_napcat.py  test_acp_client.py  test_agent_manager.py  test_command.py  test_config.py  test_converter.py  test_dispatcher.py  test_handler.py  test_image_utils.py  test_integration.py  test_napcat_server.py  test_opencode.py  test_permission.py  test_prompt.py  test_prompt_runner.py  test_server.py  test_session.py
tools/: fake_napcat.py
